--- a/CSS/index.css
+++ b/CSS/index.css
@@ -21,6 +21,13 @@ h6
 	text-align: center;
 	font-size: 20px;
 }
+img
+{
+	margin-bottom: -220px;
+	margin-left: 620px;
+	height: 130px;
+	width: 130px;
+}
 #opciones a
 {
 	float: left;
