--- a/CSS/problema2.css
+++ b/CSS/problema2.css
@@ -18,6 +18,7 @@ h3
 }
 img
 {
+	margin-top: -30px;
 	height: 200px;
 	width: 200px;
 	float: right;
@@ -29,7 +30,7 @@ p
 #cuadro
 {
 	width: 1253px;
-	height: 210px;
+	height: 320px;
 	padding: 20px 40px;
 	background: #CFA280;
 }
